samples/_failures_safe/1761246163_70d1b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d6a4de6.c: In function ‘main’:
./samples/SAFE/__tmp_4d6a4de6.c:164:5: error: ‘size’ undeclared (first use in this function); did you mean ‘size_t’?
  164 |     size
      |     ^~~~
      |     size_t
./samples/SAFE/__tmp_4d6a4de6.c:164:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4d6a4de6.c:164:9: error: expected ‘;’ at end of input
  164 |     size
      |         ^
      |         ;
./samples/SAFE/__tmp_4d6a4de6.c:164:5: error: expected declaration or statement at end of input
  164 |     size
      |     ^~~~
